# poo-tracker

./: .air.toml  .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .pnpmrc  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.cjs  eslint.config.js  login.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  temp-pr-update.md
.devcontainer/: .gitignore  Dockerfile  GPG_SETUP.md  README.md  UV_SETUP.md  devcontainer.json  devcontainer.sh  docker-compose.dev.yml  post-create.sh  post-start.sh  settings.json  uv-manager.sh
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-FEATURE-REQUEST.yml  02-BUG-REPORT.yml  03-question.yml  config.yml
.github/actions/svg-converter/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/instructions/: go.instructions.md
.github/workflows/: ci.yml  format.yml  release.yml  svg-convert.yml
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml  .yamllint.yaml
ai-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
ai-service/src/ai_service/: main.py
ai-service/src/ai_service/config/: __init__.py  logging.py  settings.py
ai-service/src/ai_service/models/: __init__.py  database.py  requests.py  responses.py
ai-service/src/ai_service/services/: __init__.py  analyzer.py  health_assessor.py  pattern_detector.py  recommender.py
ai-service/src/ai_service/utils/: __init__.py  cache.py  data_processing.py  health_metrics.py  validators.py
ai-service/tests/: dummy_data.py  test_comprehensive.py  test_config_utils.py  test_main.py  test_models_simple.py  test_services.py
backend/: .air.toml  .env.example  .eslintrc.js  .prettierrc  PROGRESS.md  README.md  REFACTOR_PROGRESS.md  demo_phase1.sh  go.mod  go.sum  jest.config.js  main.go  package.json  test-validation.js  tsconfig.json  vitest.config.d.ts  vitest.config.js  vitest.config.js.map  vitest.config.ts
backend/cmd/server/: main.go
backend/docs/: ADR-001-clean-architecture.md  ARCHITECTURE.md  PERFORMANCE.md  REFACTOR-SUMMARY.md  TESTING.md  VALIDATION_RANGE_IMPROVEMENTS.md
backend/internal/app/: app.go  app_test.go  config.go  container.go
backend/internal/middleware/: audit.go  auth.go  auth_test.go  security.go
backend/internal/model/: bowel.go  enums.go  enums_test.go  meal.go  medication.go  relations.go  symptom.go  two_factor.go  user.go
backend/internal/repository/: bowel_details_test.go  errors.go  medication.go  medication_test.go  memory.go  memory_test.go  relations.go  repository.go  symptom.go  symptom_test.go  two_factor.go  user.go  user_test.go
backend/internal/service/: analytics.go  audit.go  audit_test.go  auth.go  auth_test.go  avg_bristol.go  avg_bristol_test.go  two_factor.go  two_factor_test.go  types.go
backend/internal/validation/: basic.go  content.go  errors.go  meal_update.go  models.go  security.go  user.go  validator.go  validator_test.go
backend/prisma/: schema.prisma
backend/scripts/: check-env.ts
backend/server/: api.go  api_test.go  bowel_movements_api.go  details_api_test.go  meal_bowel_relations_api.go  meal_symptom_relations_api.go  medication_api.go  medication_api_test.go  relations_api.go  relations_coordinator_api.go  server.go  server_test.go  symptom_api.go  symptom_api_test.go  two_factor_api.go  user_api.go  user_api_test.go
backend/src/: config.ts  index.ts
backend/src/__tests__/: app.test.ts  health.test.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/routes/: analytics.ts  auth.ts  bowel-movements.ts  entries.ts  meals.ts  uploads.ts
backend/src/services/: ImageProcessingService.ts
backend/src/utils/: add-constraints.ts  filename.ts  logger.ts  seed.ts
branding/: Logo.tsx  README.md  logo.js  logo.native.js
frontend/: .env.example  .eslintrc.json  README.md  eslint.config.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  AuthStore.test.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: Logo.test.tsx  Logo.tsx  Navbar.test.tsx  Navbar.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/core/: services.ts
frontend/src/hooks/: useDashboard.ts  useEntryLinking.ts  useImageUpload.ts  useMeals.ts
issues/: analytics_stub_replacement.md  trigger_analysis_issue.md
(+173 files in other folders)
