[project]
name = "poo-tracker-ai-service"
version = "1.0.0"
description = "AI service for Poo Tracker analytics and insights"
authors = [
    { name = "Kaj Kowalski", email = "dev@kajkowalski.nl" }
]
readme = "README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.12",
    "httpx==0.28.1",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "redis>=5.0.0",
    "scikit-learn>=1.5.0",
    "uvicorn[standard]==0.34.3; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[project.scripts]
ai-service = "ai_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    ".",
]
asyncio_mode = "auto"
